--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no" />
 		<title>Learn Game Development at ZENVA.com</title>
-		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/phaser@3.87.0/dist/phaser.min.js"></script>		
+		<script type="application/javascript" src="https://cdn.jsdelivr.net/npm/phaser@3.87.0/dist/phaser.min.js"></script>		
 		<style>
 		  body {
 		    padding: 0px;
@@ -17,6 +17,6 @@
 
 	<body>  
 		<!-- include the main game file -->
-		<script src="js/main.js"></script>
+		<script type="application/javascript" src="js/main.js"></script>
 	</body>
 </html>
